criando o projeto crossCutting para injeção de dependencia, e as services PasswordService e UserRegistrationDomainService

--- a/Ecommerce.Infrastructure/Ecommerce.Infrastructure.csproj
+++ b/Ecommerce.Infrastructure/Ecommerce.Infrastructure.csproj
@@ -14,12 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DependencyInjection\" />
     <Folder Include="Logs\" />
-    <Folder Include="Security\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.13">
       <PrivateAssets>all</PrivateAssets>
