--- a/Ecommerce.Api/Ecommerce.Api.csproj
+++ b/Ecommerce.Api/Ecommerce.Api.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.Application\Ecommerce.Application.csproj" />
-    <ProjectReference Include="..\Ecommerce.Infrastructure\Ecommerce.Infrastructure.csproj" />
+    <ProjectReference Include="..\Ecommerce.CrossCutting\Ecommerce.CrossCutting.csproj" />
       </ItemGroup>
 
 </Project>
