--- a/Ecommerce.UnitTests/Ecommerce.UnitTests.csproj
+++ b/Ecommerce.UnitTests/Ecommerce.UnitTests.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.Application\Ecommerce.Application.csproj" />
     <ProjectReference Include="..\Ecommerce.Domain\Ecommerce.Domain.csproj" />
+    <ProjectReference Include="..\Ecommerce.Infrastructure\Ecommerce.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
